--- a/login.html
+++ b/login.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUरुप्प Admin Login</title>
-    <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="login.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <main>
-        <div class="login-box">
-            <div class="login-logo">
-                <i class="fas fa-mug-hot"></i>
-            </div>
-            <h1 class="login-title">SUरुप्प Admin Login</h1>
-            <p class="login-subtitle">This page can only be accessed by admin!</p>
-            <form>
-                <label>Email</label>
-                <input type="email" placeholder="admin@suruppa.com">
-                <label>Password</label>
-                <input type="password" placeholder="password">
-                <a href="admin.html">
-                    <button type="button" onclick="location.href='admin.html'">Login</button>
-                </a>
-            </form>
-            <div id="go-back" onclick="location.href='index.html'">
-                <p><u>Click here to go back.</u></p>
-            </div>
+      <div class="login-box">
+        <div class="login-logo">
+          <i class="fas fa-mug-hot"></i>
         </div>
+        <h1 class="login-title">SUरुप्प Admin Login</h1>
+        <p class="login-subtitle">This page can only be accessed by admin!</p>
+        <form>
+          <label>Email</label>
+          <input type="email" placeholder="admin@suruppa.com" />
+          <label>Password</label>
+          <input type="password" placeholder="password" />
+          <a href="admin.html">
+            <button type="button" onclick="location.href='admin.html'">
+              Login
+            </button>
+          </a>
+        </form>
+        <div id="go-back" onclick="location.href='index.html'">
+          <p><u>Click here to go back.</u></p>
+        </div>
+      </div>
     </main>
 
-    
-    <footer>
-        © 2025 SUरुप्प Digital Tea House. All rights reserved.
-    </footer>
-</body>
-
+    <footer>© 2025 SUरुप्प Digital Tea House. All rights reserved.</footer>
+  </body>
 </html>
